--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         type="text"
                         placeholder="Your Phone Number"
                         class="input input-bordered"
+                        id="phone-number"
                         required
                       />
                     </div>
@@ -46,6 +47,7 @@
                         type="password"
                         placeholder="Your Pin"
                         class="input input-bordered"
+                        autocomplete="off"
                         required
                       />
                       <label class="label">
@@ -54,7 +56,7 @@
                         >
                       </label>
                     </div>
-                    <div class="form-control mt-6">
+                    <div id="button-login" class="form-control mt-6">
                       <button class="btn btn-primary">Login</button>
                     </div>
                   </form>
@@ -65,6 +67,7 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+
+    <script src="js/login.js"></script>
   </body>
 </html>
