Login page updated and home page added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         placeholder="Your Pin"
                         class="input input-bordered"
                         autocomplete="off"
+                        id="pin-number"
                         required
                       />
                       <label class="label">
