Add money section updated

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
             <div>
               <div class="stats shadow">
                 <div class="stat">
-                  <div class="stat-value">89400</div>
+                  <div id="account-balance" class="stat-value">9400</div>
                   <div class="stat-desc text-center">Available Balance</div>
                 </div>
               </div>
